При дублировании транзакции ее дубликат сразу открывается для редактирования.

--- a/app/src/main/res/menu/context_menu_transactions.xml
+++ b/app/src/main/res/menu/context_menu_transactions.xml
@@ -25,7 +25,7 @@
         android:orderInCategory="100"
         />
     <item
-        android:id="@+id/action_dulpicate"
+        android:id="@+id/action_duplicate"
         android:title="@string/act_duplicate"
         android:orderInCategory="100"
         />
