В CSV выгружеются параметры чека ФН, ФД, ФП. При экспорте CSV появилась опция "Экспорт товаров", при ее выборе транзакции, имеющие товары, разбиваются на несколько строк в соответсвии со списком товаров. Каждому товару указывается своя цена, категория и проект.

--- a/app/src/main/res/layout/activity_export_csv.xml
+++ b/app/src/main/res/layout/activity_export_csv.xml
@@ -54,6 +54,13 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/ent_file_name"
                 android:inputType="textMultiLine"/>
+
+            <CheckBox
+                android:id="@+id/checkBoxExportProducts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/ttl_export_products" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
